--- a/backend/package.json
+++ b/backend/package.json
@@ -21,12 +21,26 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/common": "^8.1.1",
+    "@nestjs/config": "^2.0.0",
+    "@nestjs/core": "^8.1.1",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/platform-express": "^8.1.1",
+    "@nestjs/typeorm": "^8.0.3",
+    "@openzeppelin/contracts": "^4.5.0",
+    "dotenv": "^16.0.0",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.3",
+    "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.4.0",
+    "typeorm": "^0.3.6",
+    "ulid": "^2.3.0",
+    "web3": "^1.7.3",
+    "web3-utils": "^1.7.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
