--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^17.0.11",
     "axios": "^0.26.1",
     "framer-motion": "^5.5.5",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.11",
     "react-dom": "^17.0.2",
