--- a/backend/src/config/env/dev.env
+++ b/backend/src/config/env/dev.env
@@ -1,4 +1,5 @@
-EMAIL_SERVICE=Gmail
-EMAIL_AUTH_USER= aaa
-EMAIL_AUTH_PASSWORD= bbb
-EMAIL_BASE_URL=http://stage.dextto.com
+NFT_DB_HOST = localhost
+NFT_DB_DATABASE= test2
+NFT_DB_USERNAME= root
+// NFT_DB_PASSWORD= '1234'
+NFT_DB_SYNCHRONIZE = "true"
