--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.26.1",
+    "caver-js": "^1.8.1",
     "framer-motion": "^5.5.5",
     "http-proxy-middleware": "^2.0.6",
     "react": "^17.0.2",
