--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "@nestjs/typeorm": "^8.0.3",
     "@openzeppelin/contracts": "^4.5.0",
     "@types/dotenv": "^8.2.0",
+    "caver-js": "^1.8.1",
     "dotenv": "^16.0.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
