--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -2,3 +2,5 @@ REACT_APP_API_HOST = localhost:3000
 REACT_APP_GAME_HOST = localhost:8000
 
 REACT_APP_CONTRACT_DEPLOYED_ADDRESS=0x183532AE7A953e5C958e01B53E0fac1B2603a618
+
+REACT_APP_OWNER_ACCOUNT_ADDRESS = 0x64202df721245ed4988eDf4F57DC7A966C0c259a
