--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+*.local
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,node,nextjs,react
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,node,nextjs,react
 
