--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,5 +1,5 @@
 REACT_APP_API_HOST = http://13.125.218.200:3000
-REACT_APP_GAME_HOST = localhost:8000
+REACT_APP_GAME_HOST = http://3.36.13.118:3000/
 
 REACT_APP_CONTRACT_DEPLOYED_ADDRESS=0x47a85CEE80F6F4BFefbf0e71F7ADF5D5B57F3c37
 
