--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
     "start": "nest start",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "NODE_ENV=dev nest start --debug --watch",
-    "start:prod": "NODE_ENV=prod node dist/main",
+    "start:prod": "cross-env NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
