--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,6 +1,8 @@
 REACT_APP_API_HOST = http://13.125.218.200:3000
 REACT_APP_GAME_HOST = http://3.36.13.118:3000/
 
+REACT_APP_KLAYTN_ENDPOINT=https://public-node-api.klaytnapi.com/v1/cypress
+
 REACT_APP_CONTRACT_DEPLOYED_ADDRESS=0xea029050bc16CC22F955b9bf5B03a2128587162c
 
 REACT_APP_OWNER_ACCOUNT_ADDRESS = 0x56F8734777B644BD95aeB10bcCE798fb6CFF7071
