--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,4 +1,4 @@
-REACT_APP_API_HOST = http://http://43.200.69.30:3000
+REACT_APP_API_HOST = http://43.200.69.30:3000
 REACT_APP_GAME_HOST = localhost:8000
 
 REACT_APP_CONTRACT_DEPLOYED_ADDRESS=0x183532AE7A953e5C958e01B53E0fac1B2603a618
